# magnum-test

./: CMakeLists.txt  README.md
data/: test_scene.gltf
src/: ColoredDrawable.cpp  ColoredDrawable.h  Object3D.h  Player.cpp  Player.h  RigidBody.cpp  RigidBody.h  TexturedDrawable.cpp  TexturedDrawable.h  globals.h  main.cpp
